# Agent-Armor-Iaga

./: .gitattributes  .gitignore  AGENT_ARMOR_1.0.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENTERPRISE.md  LICENSE  MIGRATION.md  NOTICE  README.md  SECURITY.md  agent-armor.config.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
community/: Cargo.toml  agent-armor.example.yaml
community/examples/: mcp_stdio_client.rs
community/fuzz/fuzz_targets/: fuzz_firewall.rs
community/src/: lib.rs  main.rs
community/src/auth/: api_keys.rs  middleware.rs
community/src/config/: env.rs  load_config.rs
community/src/core/: errors.rs  types.rs
community/src/dashboard/: dashboard.html
community/src/demo/: scenarios.rs
community/src/events/: bus.rs  sse.rs  webhooks.rs
community/src/mcp_proxy/: proxy_server.rs  tool_interceptor.rs
community/src/mcp_server/: server.rs
community/src/modules/audit/: audit_store.rs  mod.rs
community/src/modules/fingerprint/: behavioral.rs
community/src/modules/injection_firewall/: prompt_firewall.rs
community/src/modules/nhi/: crypto_identity.rs
community/src/modules/policy/: mod.rs  tool_risk.rs
community/src/modules/protocol/: detect_protocol.rs  mcp_parser.rs  mod.rs
community/src/modules/review/: mod.rs  review_store.rs
community/src/modules/risk/: adaptive_scorer.rs
community/src/modules/sandbox/: sandbox_executor.rs
community/src/modules/session_graph/: session_dag.rs
community/src/modules/taint/: taint_tracker.rs
community/src/modules/telemetry/: otel_emitter.rs
community/src/pipeline/: execute_pipeline.rs  mod.rs
community/src/plugins/: registry.rs  types.rs
community/src/server/: app_state.rs  create_server.rs
community/src/storage/: migrations.rs  postgres.rs  sqlite.rs  traits.rs
community/tests/: cli_plugin_tests.rs  e2e_http_tests.rs  integration_tests.rs  plugin_example_tests.rs  unit_tests.rs
crates/armor-apl/: Cargo.toml
crates/armor-apl/examples/: no_pii_egress.apl
crates/armor-apl/src/: ast.rs  eval.rs  lexer.rs  lib.rs  parser.rs  validator.rs
crates/armor-apl/tests/: eval.rs  parse.rs
crates/armor-core/: Cargo.toml
crates/armor-core/.cargo/: audit.toml
crates/armor-core/examples/plugins/: README.md
crates/armor-core/examples/policies/: strict.apl
crates/armor-core/fuzz/: Cargo.toml
crates/armor-core/fuzz/fuzz_targets/: fuzz_session_dag.rs  fuzz_taint.rs
crates/armor-core/src/: main.rs  ui_embed.rs
crates/armor-core/src/auth/: middleware.rs
crates/armor-core/src/core/: errors.rs
crates/armor-core/src/dashboard/: dashboard.html
crates/armor-core/src/events/: webhooks.rs
crates/armor-core/src/mcp_proxy/: proxy_server.rs
crates/armor-core/src/mcp_server/: server.rs
crates/armor-core/src/modules/threat_intel/: feed.rs
crates/armor-core/src/pipeline/: apl_overlay.rs  execute_pipeline.rs  reasoning.rs  receipts.rs
crates/armor-core/src/plugins/: host.rs
crates/armor-core/src/server/: app_state.rs  create_server.rs
crates/armor-core/src/storage/: postgres.rs  traits.rs
crates/armor-core/tests/: e2e_http_tests.rs  integration_tests.rs  plugin_example_tests.rs  property_tests.rs  unit_tests.rs
crates/armor-core/tests/support/: plugin_test_support.rs
crates/armor-kernel/: Cargo.toml
crates/armor-kernel/src/: bpf.rs  decision.rs  engine.rs  lib.rs  userspace.rs
crates/armor-kernel/tests/: userspace.rs
crates/armor-reasoning/: Cargo.toml  README.md
crates/armor-reasoning/src/: engine.rs  evidence.rs  lib.rs  tract_engine.rs
crates/armor-reasoning/tests/: noop.rs  tract_smoke.rs
crates/armor-receipts/: Cargo.toml
crates/armor-receipts/migrations/postgres/: 0001_receipts.sql
crates/armor-receipts/migrations/sqlite/: 0001_receipts.sql
crates/armor-receipts/src/: lib.rs  merkle.rs  receipt.rs  replay.rs  signer.rs  sqlite.rs
crates/armor-receipts/tests/: merkle_append.rs  replay.rs  sign_verify.rs  sqlite_store.rs
docs/: ARCHITECTURE.md  CASE_STUDY.md  DEMO.md  ROADMAP.md  ROADMAP_v0.4.0.md  openapi.yaml
docs/adr/: 0001-workspace-split.md  0002-open-source-license-and-scope.md  0003-signed-receipts-design.md  0004-apl-mvp.md  0005-reasoning-plane-mvp.md  0006-kernel-mvp.md  0007-m5-hardening-rc.md  0008-apl-as-live-policy-engine.md
enterprise/: Cargo.toml
enterprise/src/: main.rs
sdks/python/: README.md  pyproject.toml
sdks/python/agent_armor/: __init__.py  client.py  decorator.py  types.py
sdks/python/agent_armor/adapters/: __init__.py  _common.py  autogen.py  crewai.py  langchain.py  openai.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/src/adapters/: openai.ts  vercel-ai.ts
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/core/: ClusterLabelOverlay.css  ClusterLabelOverlay.tsx  ClusterLabels.tsx  EnergyRings.tsx  NebulaField.tsx  NeuralNetwork.tsx  NeuralScene.tsx  NeuralSphere.tsx  ParticleField.tsx  neuralData.ts
ui/src/components/overlay/: NeuralCopyOverlay.tsx
ui/src/hooks/: useAgentArmorDemo.ts
ui/src/store/: useVisualStore.ts
ui/src/styles/: global.css
