# Agent Armor 1.0 — workspace root
# M1 "Fortezza Foundation" + M2 "Signed Receipts" inside the workspace.
# Future milestones add: armor-apl (M3), armor-reasoning (M3.5),
# armor-kernel (M4). Mesh deferred to 1.1. Licensed under BUSL-1.1
# with Change License: Apache-2.0 (auto-converts 4 years after each
# release; see LICENSE + docs/adr/0002-open-source-license-and-scope.md).

[workspace]
resolver = "2"
members = [
    "crates/armor-core",
    "crates/armor-receipts",
    "crates/armor-apl",
    "crates/armor-reasoning",
    "crates/armor-kernel",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/EdoardoBambini/Agent-Armor-Iaga"
authors = ["Edoardo Bambini"]

[workspace.dependencies]
# shared deps inherited by crates in the workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
anyhow = "1"
# crypto primitives for armor-receipts (Ed25519 + SHA-256)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
# database access
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "chrono", "uuid", "macros", "migrate"] }
# APL lexer
logos = "0.14"
