[package]
name = "agent-armor"
version = "0.1.0"
edition = "2021"
description = "IAGA Agent Armor - zero-trust governance for autonomous AI agents (Community Edition)"
license = "BUSL-1.1"

[lib]
name = "agent_armor"
path = "src/lib.rs"

[[bin]]
name = "agent-armor"
path = "src/main.rs"

[features]
default = ["demo"]
demo = []

[dependencies]
axum = { version = "0.8", features = ["default"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
hex = "0.4"
futures-core = "0.3"
