[package]
name = "agent-armor-enterprise"
version = "0.1.0"
edition = "2021"
description = "IAGA Agent Armor - Enterprise Edition with advanced governance, multi-tenant, SSO, ML, and IAGA integration"
license = "LicenseRef-Proprietary"

[[bin]]
name = "agent-armor-enterprise"
path = "src/main.rs"

[dependencies]
agent-armor = { path = "../community" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
