[package]
name = "armor-apl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent Armor 1.0 — Armor Policy Language (APL) parser, type validator, and deterministic evaluator"

[lib]
name = "armor_apl"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
