[package]
name = "agent-armor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent Armor 1.0 — zero-trust governance kernel for autonomous AI agents (open-source edition)"

[lib]
name = "agent_armor"
path = "src/lib.rs"

# Primary binary — name preserved from 0.4.0 for backward compat
[[bin]]
name = "agent-armor"
path = "src/main.rs"

# 1.0 short alias — same entry point, official alias going forward
[[bin]]
name = "armor"
path = "src/main.rs"

[features]
default = ["demo", "sqlite", "receipts", "apl", "reasoning", "kernel"]
demo = []
sqlite = ["sqlx/sqlite", "armor-receipts?/sqlite"]
postgres = ["sqlx/postgres", "armor-receipts?/postgres"]
plugins = ["wasmtime"]
# M1 scaffolding: enable to embed ui/dist/ into the binary via rust-embed.
# Requires `ui/dist/` to exist at compile time (run `cd ui && npm run build`).
ui-embed = ["rust-embed"]
# M2: Ed25519-signed action receipts + deterministic replay.
# Backend currently bound to SQLite; postgres backend exposed via
# armor-receipts/postgres (wired in a follow-up milestone).
receipts = ["dep:armor-receipts"]
# M3: Armor Policy Language (APL) parser + evaluator. When enabled,
# `armor policy test` can compile and dry-run .apl files.
apl = ["dep:armor-apl"]
# M3.5: Probabilistic Reasoning Plane wiring. `reasoning` adds the
# trait surface and the always-available NoopEngine. `ml` additionally
# pulls in the tract-onnx backend so real ONNX models can be loaded.
reasoning = ["dep:armor-reasoning"]
ml = ["reasoning", "armor-reasoning/ml"]
# M4: Enforcement kernel. `kernel` enables the cross-platform
# UserspaceKernel + the `armor run` subcommand. `linux-bpf` flips on
# the eBPF/LSM scaffold (Linux-only; the actual loader lands in M4.1).
kernel = ["dep:armor-kernel"]
linux-bpf = ["kernel", "armor-kernel/linux-bpf"]

[dependencies]
# workspace-inherited (shared with future crates)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# crate-specific
axum = { version = "0.8", features = ["default"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "chrono", "uuid", "macros", "migrate"] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
hex = "0.4"
futures-core = "0.3"

# optional features
wasmtime = { version = "36.0.8", optional = true }
rust-embed = { version = "8", optional = true, features = ["interpolate-folder-path"] }
armor-receipts = { path = "../armor-receipts", optional = true }
armor-apl = { path = "../armor-apl", optional = true }
armor-reasoning = { path = "../armor-reasoning", optional = true }
armor-kernel = { path = "../armor-kernel", optional = true }

[dev-dependencies]
proptest = "1.6"
tokio = { version = "1", features = ["full", "test-util"] }
wat = "1"
