[package]
name = "armor-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent Armor 1.0 — Enforcement kernel: cross-platform userspace launcher + eBPF LSM scaffold (Linux)"

[lib]
name = "armor_kernel"
path = "src/lib.rs"

[features]
default = []
# Compiles the eBPF/LSM scaffold (Linux-only). The actual eBPF program
# loader lands in M4.1 — for now this feature wires the cross-platform
# trait surface so the host can choose between userspace and kernel
# enforcement at construction time.
linux-bpf = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
